feat(cli): 新增 --json/--print-md/--quiet 输出与日志控制
增强 token 读取：支持 --token 传入文件路径；支持 GITHUB_TOKEN_PATH、GITLAB_TOKEN_PATH、GITLAB_PRIVATE_TOKEN_PATH 从文件读取
输出 JSON 模式：返回 md、from、to、repoProvider、repo、releaseRepo、prerelease、commitsCount、compareUrl
仅输出 Markdown：新增 --print-md，配合 --quiet 便于在工作流中抓取内容
调整对比链接：根据 repoProvider 生成 GitHub/GitLab 对比 URL，文案统一为 “View changes”
清理无效分支：移除 isGitLab 判定，固定命令名为 changelogits，--repo-provider 默认值改为 github
上调运行环境：engines.node 至 >=18.18.0
文档更新：修改 README
测试同步：更新对比链接相关的快照
BREAKING CHANGE: 运行环境要求 Node.js >= 18.18.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "cSpell.words": [
     "Changelogen",
-    "changelogithub"
+    "changelogithub",
+    "changelogits"
   ],
 
   // Enable the flat config support
